# tiny_llm_server

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  Instruct  README.md  build_linux.sh  build_ubuntu.sh  build_windows.bat  config.txt  download_weight.sh
client/: README.md  error_handling_client.py  multi_inference.py  simple_client.py  test_client copy.py  test_client.py  test_client2.py
model/: params_properties  tinystories_tokenizer_vocab.json
script/: release_weight.sh  tokenizer_basic.py  train.ipynb  transformer_tiny.py
src/: main_server.cpp
src/ipc/: ipc_utils.cpp  ipc_utils.hpp  shared_mem.cpp  shared_mem.hpp
src/llm/: simple_tokenizer.cpp  simple_tokenizer.hpp  tensor.hpp  tiny_llm_inference.cpp  tiny_llm_inference.hpp  transformer.cpp
src/neural_net/: tensor.cpp  tiny_llm_inference.cpp  transformer.cpp  transformer.hpp
src/server/: task_dispatcher.cpp  task_dispatcher.hpp  worker_manager.cpp  worker_manager.hpp
src/utils/: config.cpp  config.hpp  http_utils.cpp  http_utils.hpp
src/worker/: simple_worker.cpp  simple_worker.hpp  worker_main.cpp  worker_process.cpp  worker_process.hpp
